# vending

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
tests/: conftest.py  test_category.py  test_machine.py  test_product.py
vending/: __init__.py  api.py  create_tables.py  models.py
vending/api/: crud.py
