[tool.poetry]
name = "vending"
version = "0.1.0"
description = ""
authors = ["fordkuppp <fordpatsakorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
flask-sqlalchemy = "^3.0.2"
mysqlclient = "^2.1.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
